--- a/style/style.css
+++ b/style/style.css
@@ -24,56 +24,13 @@
 	width: 15%;
 }
 
-/*body {
-	height: 100%;
-	width: 100%;
-}
-
-.search-bar {
-	margin: 0 auto;
-	width: 20%;
-}
-
-.current-image {
-	margin: 0 auto;
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
 .results-container {
-	margin: 0 auto;
-	max-height: 13em;
-	overflow: auto;
+	height: 320px;
+	width: 100%;
+	overflow-x: scroll;
 	display: flex;
 	flex-wrap: wrap;
-	width: 55%;
-	justify-content: flex-start;
-	align-content: flex-start;
-}
-
-
-.left-arrow, .right-arrow {
-	color: white;
-	font-weight: bold;
-	font-size: 60px;
-	text-align: center;
-	cursor: pointer;
-}
-
-.left-arrow {
-	margin-left: 5px;
-}
-
-.right-arrow {
-	margin-right: 5px;
-}
-
-.headline {
-	text-align: center;
+	justify-content: space-between;
 }
 
 .search-result {
@@ -95,7 +52,7 @@
 .hour-price, .day-price {
 	padding: 0 5px;
 	float: right;
-	background-color: black;
+	background-color: rgba(0,0,0,0.6);
 	color: white;
 	text-align: right;
 	font-weight: bold;
@@ -114,7 +71,7 @@
 }
 
 .rating {
-	background-color: black;
+	background-color: rgba(0,0,0,0.6);
 	color: white;
 	font-weight: bold;
 	align-self: flex-end;
@@ -134,6 +91,6 @@
 	margin: 3px;
 	width: auto;
 	padding: 3px;
-	background-color: black;
+	background-color: rgba(0,0,0,0.6);
 	border-radius: 5px;
-}*/
+}
